# gpcc_LinuxDemo

./: .gitmodules  CMakeLists.txt  README.md  empty.cpp
cmake/: CMakeLists.productive.cmake  CMakeLists.unittest.cmake
demo_application/: CMakeLists.txt
demo_application/src/: CMakeLists.txt
demo_application/src_notest/: CMakeLists.txt  main.cpp
demo_application/src_notest/cood_demo/: COOD_Demo.cpp  COOD_Demo.hpp  cood_demo.dox
demo_application/test_src/: empty.cpp
demo_application/testcases/: CMakeLists.txt  test_demo.cpp
scripts/: build_productive.sh  build_unittest.sh  build_x.sh  cmake_init_productive_debug.sh  cmake_init_productive_release.sh  cmake_init_unittest_debug.sh  cmake_init_unittest_release.sh  execute_unittests.sh  execute_unittests_memcheck.sh  execute_unittests_memcheck_all.sh
